.provarCaches/00D6C0000000xA6UAI/objects/sked__Templated_Resource_Requirement__c.object
<CustomObject>
    <fields>
        <fullName>sked__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked__Job_Allocation_Time_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Job Allocation Time Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__Relative_Start__c</fullName>
        <label>Relative Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__Templated_Job__c</fullName>
        <label>Templated Job</label>
        <referenceTo>sked__Templated_Job__c</referenceTo>
        <relationshipLabel>Templated Resource Requirements</relationshipLabel>
        <relationshipName>Templated_Resource_Requirements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Templated Resource Requirement</label>
    <nameField>
        <displayFormat>TRR-{0000}</displayFormat>
        <label>Templated Resource Requirement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Templated Resource Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>sked__QuantityGreaterThanZero</fullName>
        <active>true</active>
        <errorConditionFormula>sked__Quantity__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>sked__Quantity__c</errorDisplayField>
        <errorMessage>Quantity must be greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sked__RelativeStartNullIfTimeSourceFalse</fullName>
        <active>true</active>
        <errorConditionFormula>AND( sked__Job_Allocation_Time_Source__c = false, NOT( ISNULL( sked__Relative_Start__c ) ) )</errorConditionFormula>
        <errorDisplayField>sked__Relative_Start__c</errorDisplayField>
        <errorMessage>Relative Start must be null if Job Allocation Time Source is false</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sked__StartOffsetDaysNonNegative</fullName>
        <active>false</active>
        <errorConditionFormula>false</errorConditionFormula>
        <errorMessage>Start Offset Days must be null or non-negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sked__TimeSourceMustHaveDuration</fullName>
        <active>false</active>
        <errorConditionFormula>false</errorConditionFormula>
        <errorMessage>Duration must be set if Job Allocation Time Source is true</errorMessage>
    </validationRules>
</CustomObject>